--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
   <title>Nu Music</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat:100,400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-
+  <link rel="stylesheet" href="reset.css">
 </head>
 
 <body>
